# cirrus-protocol

./: .gitignore  Anchor.toml  Cargo.toml  LICENSE  README.md  package-lock.json  package.json  tsconfig.json
circuits/: README.md  WITHDRAW_SOL_V1.circom  package.json
docs/: ADAPTER_MODEL.md  DELAYED_ADAPTER_BINDING.md  DEVNET_ALPHA_TESTER_QUICKSTART.md  DIAGNOSTIC_LAYER_SCOPE.md  FREEZE_MATRIX.md  HIDDEN_EXIT_COMMITMENT.md  KNOWN_LIMITATIONS.md  METADATA_LINKABILITY.md  PRIVACY_DIAGNOSTIC_MODEL.md  PRIVACY_SURFACE_MODEL.md  SECURITY_MODEL.md  ZK_ARTIFACTS.md  ZK_DEPOSIT_AND_INDEXER_SPEC.md  indexer_finality_policy.md
idl/: shielded_pool_anchor.json
lib/: crypto.ts
programs/shielded_pool_anchor/: Cargo.toml
programs/shielded_pool_anchor/src/: constants.rs  errors.rs  lib.rs  migration.rs  state.rs  zk_hash.rs  zk_verifier.rs  zk_vk_withdraw_sol_v1.rs
programs/shielded_pool_anchor/src/instructions/: add_allowed_root.rs  attestation.rs  deposit.rs  deposit_note.rs  init_note_tree.rs  initialize_config.rs  initialize_pool.rs  migrate_config.rs  migrate_pool.rs  mod.rs  remove_allowed_root.rs  set_root_submitter_authority.rs  update_verifier_config.rs  withdraw.rs  withdraw_zk.rs
programs/shielded_pool_anchor/tests/: litesvm_real_proof.rs
scripts/: generate_rust_vk.ts  run_all_tests.sh  zk_indexer_fixture.ts  zk_indexer_rpc_fetch.ts  zk_prover_export_witness.ts  zk_witness_dry_run.ts
tests/: admin_hardening.ts  attestation_threshold.ts  deposit.ts  deposit_note.ts  init_note_tree.ts  migration.ts  npm_devnet_alpha_pack_smoke.ts  npm_devnet_alpha_package.ts  (+42 more)
(+58 files in other folders)
